# ta-rust

./: Cargo.toml  README.md
example_games/explain-text-adventurer/: game.py  textadventure.toml
example_games/shell-script/: script.sh  textadventure.toml
scripts/: constantly-refresh-in-browser  convert-old-yml-to-new-toml  showprocs
src/: main.rs
static/: index.html  play.html  play.js  style.css
