[package]
name = "ta-rust"
version = "0.1.0"
authors = ["Adam Kewley <contact@adamkewley.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.6"
actix = "0.9.0"
actix-web = "2.0"
actix-files = "0.2.1"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2.33.0"
toml = "0.5.5"
bytes = "0.5.3"