[package]
name = "ta-rust"
version = "0.1.0"
authors = ["Adam Kewley <contact@adamkewley.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2.33.0"
toml = "0.5.5"
bytes = "0.5.3"
env_logger = "0.7.1"
log = "0.4.8"
rust-embed = "5.5.0"
